--- a/config/corne.conf
+++ b/config/corne.conf
@@ -8,7 +8,7 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # 禁用外部电源关闭修复显示器会随灯关闭的问题，临时解决办法
-CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 
 # 修复iPadOS/macOS兼容性问题,开启后音乐音量等媒体按键在无线模式下在某些系统上会失效
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=n
@@ -41,13 +41,13 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
 # 是否开启键盘睡眠功能 请勿轻易开启 可能存在睡眠后无法唤醒键盘的情况
-CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=y
 
 # 不活动xx分钟后进入深度睡眠,深度睡眠纯在屏幕无法唤醒问题
 #1800000 毫秒 = 30 分钟 * 60 秒 * 1000
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=86400000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
 # 进入空闲状态前的不活动毫秒数 
-CONFIG_ZMK_IDLE_TIMEOUT=43200000
+CONFIG_ZMK_IDLE_TIMEOUT=900000
 
 #USB调试设置
 # 打开日志记录，并设置 ZMK 日志记录为调试输出
