--- a/config/west.yml
+++ b/config/west.yml
@@ -2,19 +2,12 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: ftc
-      url-base: https://github.com/ftc
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
+    - name: lttb
+      url-base: https://github.com/lttb
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: lttb
+      revision: experimental
       import: app/west.yml
-#   - name: zmk
-#      remote: ftc
-#      revision: mouse-ftc
-#      import: app/west.ym
-
   self:
     path: config
